--- a/lizheng/pom.xml
+++ b/lizheng/pom.xml
@@ -8,10 +8,10 @@
         <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>com</groupId>
+    <artifactId>lizheng</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>lizheng</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
