--- a/lizheng/src/main/resources/application.properties
+++ b/lizheng/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 student.name=lizheng
 student.age=20
-server.port=8111
+server.port=8080
 
 # Redis服务器地址
 spring.redis.host=127.0.0.1
@@ -34,3 +34,4 @@ aaa.mkaaa.two[0]=1
 aaa.mkaaa.two[1]=2
 aaa.mkaaa.one[1]=2
 
+spring.kafka.listener.missing-topics-fatal=false
