--- a/lizheng/src/main/resources/application.yml
+++ b/lizheng/src/main/resources/application.yml
@@ -10,3 +10,6 @@ spring:
       auto-commit-interval: 1000
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  data:
+    elasticsearch:
+      cluster-nodes: 127.0.0.1:9300
